// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Field 1`] = `
<p
  className="ola_field-description"
>
  Description
</p>
`;

exports[`Default Field with error 1`] = `
<p
  className="ola_field-error"
>
  Description
</p>
`;
